// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/create_post Show tutorial 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex="-1"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <span
          className="post-body__actions"
        >
          <Connect(injectIntl(FileUpload))
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <div>
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={-7}
            />
            <button
              aria-label="emoji picker"
              className="style--none emoji-picker__container post-action"
              onClick={[Function]}
              type="button"
            >
              <EmojiIcon
                className="icon icon--emoji "
                id="emojiPickerButton"
              />
            </button>
          </div>
          <a
            aria-label="Send a message"
            className="send-button theme disabled"
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            <LocalizedIcon
              className="fa fa-paper-plane"
              component="i"
              title={
                Object {
                  "defaultMessage": "Send Post Icon",
                  "id": "create_post.icon",
                }
              }
            />
          </a>
        </span>
      </div>
      <Connect(TutorialTip)
        diagnosticsTag="tutorial_tip_1_sending_messages"
        id="postTextboxTipMessage"
        overlayClass="tip-overlay--chat"
        placement="top"
        screens={
          Array [
            <div>
              <h4>
                <FormattedMessage
                  defaultMessage="Sending Messages"
                  id="create_post.tutorialTip.title"
                  values={Object {}}
                />
              </h4>
              <p>
                <injectIntl(FormattedMarkdownMessage)
                  defaultMessage="Type here to write a message and press **Enter** to post it."
                  id="create_post.tutorialTip1"
                />
              </p>
              <p>
                <injectIntl(FormattedMarkdownMessage)
                  defaultMessage="Click the **Attachment** button to upload an image or a file."
                  id="create_post.tutorialTip2"
                />
              </p>
            </div>,
          ]
        }
      />
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <TextboxLinks
          characterLimit={4000}
          message=""
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 8,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm Sending Notifications to Entire Channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/create_post should match snapshot for center textbox 1`] = `
<form
  className="center"
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex="-1"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <span
          className="post-body__actions"
        >
          <Connect(injectIntl(FileUpload))
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <div>
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={-7}
            />
            <button
              aria-label="emoji picker"
              className="style--none emoji-picker__container post-action"
              onClick={[Function]}
              type="button"
            >
              <EmojiIcon
                className="icon icon--emoji "
                id="emojiPickerButton"
              />
            </button>
          </div>
          <a
            aria-label="Send a message"
            className="send-button theme disabled"
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            <LocalizedIcon
              className="fa fa-paper-plane"
              component="i"
              title={
                Object {
                  "defaultMessage": "Send Post Icon",
                  "id": "create_post.icon",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <TextboxLinks
          characterLimit={4000}
          message=""
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 8,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm Sending Notifications to Entire Channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/create_post should match snapshot for read only channel 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex="-1"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="This channel is read-only. Only members with permission can post here."
          disabled={true}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <span
          className="post-body__actions"
        >
          <a
            aria-label="Send a message"
            className="send-button theme disabled"
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            <LocalizedIcon
              className="fa fa-paper-plane"
              component="i"
              title={
                Object {
                  "defaultMessage": "Send Post Icon",
                  "id": "create_post.icon",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <TextboxLinks
          characterLimit={4000}
          message=""
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 8,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm Sending Notifications to Entire Channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/create_post should match snapshot when cannot post 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex="-1"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <span
          className="post-body__actions"
        >
          <Connect(injectIntl(FileUpload))
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <div>
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={-7}
            />
            <button
              aria-label="emoji picker"
              className="style--none emoji-picker__container post-action"
              onClick={[Function]}
              type="button"
            >
              <EmojiIcon
                className="icon icon--emoji "
                id="emojiPickerButton"
              />
            </button>
          </div>
          <a
            aria-label="Send a message"
            className="send-button theme disabled"
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            <LocalizedIcon
              className="fa fa-paper-plane"
              component="i"
              title={
                Object {
                  "defaultMessage": "Send Post Icon",
                  "id": "create_post.icon",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <TextboxLinks
          characterLimit={4000}
          message=""
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 8,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm Sending Notifications to Entire Channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/create_post should match snapshot when file upload disabled 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create post-create--attachment-disabled"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex="-1"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <span
          className="post-body__actions"
        >
          <Connect(injectIntl(FileUpload))
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <div>
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={-7}
            />
            <button
              aria-label="emoji picker"
              className="style--none emoji-picker__container post-action"
              onClick={[Function]}
              type="button"
            >
              <EmojiIcon
                className="icon icon--emoji "
                id="emojiPickerButton"
              />
            </button>
          </div>
          <a
            aria-label="Send a message"
            className="send-button theme disabled"
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            <LocalizedIcon
              className="fa fa-paper-plane"
              component="i"
              title={
                Object {
                  "defaultMessage": "Send Post Icon",
                  "id": "create_post.icon",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <TextboxLinks
          characterLimit={4000}
          message=""
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 8,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm Sending Notifications to Entire Channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;

exports[`components/create_post should match snapshot, init 1`] = `
<form
  className=""
  id="create_post"
  onSubmit={[Function]}
>
  <div
    className="post-create"
  >
    <div
      className="post-create-body"
    >
      <div
        aria-label="message input complimentary region"
        className="post-body__cell a11y__region"
        data-a11y-sort-order="2"
        id="centerChannelFooter"
        role="application"
        tabIndex="-1"
      >
        <Connect(Textbox)
          badConnection={false}
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          characterLimit={4000}
          createMessage="Write to "
          disabled={false}
          emojiEnabled={true}
          handlePostError={[Function]}
          id="post_textbox"
          listenForMentionKeyClick={true}
          onBlur={[Function]}
          onChange={[Function]}
          onComposition={[Function]}
          onHeightChange={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseUp={[Function]}
          preview={false}
          useChannelMentions={true}
          value=""
        />
        <span
          className="post-body__actions"
        >
          <Connect(injectIntl(FileUpload))
            fileCount={0}
            getTarget={[Function]}
            onFileUpload={[Function]}
            onFileUploadChange={[Function]}
            onUploadError={[Function]}
            onUploadProgress={[Function]}
            onUploadStart={[Function]}
            postType="post"
          />
          <div>
            <EmojiPickerOverlay
              enableGifPicker={true}
              onEmojiClick={[Function]}
              onEmojiClose={[Function]}
              onGifClick={[Function]}
              onHide={[Function]}
              show={false}
              spaceRequiredAbove={476}
              spaceRequiredBelow={497}
              target={[Function]}
              topOffset={-7}
            />
            <button
              aria-label="emoji picker"
              className="style--none emoji-picker__container post-action"
              onClick={[Function]}
              type="button"
            >
              <EmojiIcon
                className="icon icon--emoji "
                id="emojiPickerButton"
              />
            </button>
          </div>
          <a
            aria-label="Send a message"
            className="send-button theme disabled"
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            <LocalizedIcon
              className="fa fa-paper-plane"
              component="i"
              title={
                Object {
                  "defaultMessage": "Send Post Icon",
                  "id": "create_post.icon",
                }
              }
            />
          </a>
        </span>
      </div>
    </div>
    <div
      className="post-create-footer"
      id="postCreateFooter"
    >
      <div
        className="d-flex justify-content-between"
      >
        <Connect(MsgTyping)
          channelId="owsyt8n43jfxjpzh9np93mx1wa"
          postId=""
        />
        <TextboxLinks
          characterLimit={4000}
          message=""
          showPreview={false}
          updatePreview={[Function]}
        />
      </div>
      <div />
    </div>
  </div>
  <PostDeletedModal
    onHide={[Function]}
    show={false}
  />
  <ConfirmModal
    confirmButtonClass="btn btn-primary"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Confirm"
        id="notify_all.confirm"
        values={Object {}}
      />
    }
    message={
      <FormattedMessage
        defaultMessage="By using @all or @channel you are about to send notifications to {totalMembers} people. Are you sure you want to do this?"
        id="notify_all.question"
        values={
          Object {
            "totalMembers": 8,
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Confirm Sending Notifications to Entire Channel"
        id="notify_all.title.confirm"
        values={Object {}}
      />
    }
  />
</form>
`;
